testsuite/tests/rename/should_fail/ImportLookupIllegal.hs
module ImportLookupIllegal where

import Control.Concurrent (module Control.Concurrent.MVar)
